# PP-OCR

./: .gitignore  CMakeLists.txt  README.md
config/: ppocr.yaml
src/: main.cpp  paddleocr.cpp
